--- a/.github/workflows/fork_build.yml
+++ b/.github/workflows/fork_build.yml
@@ -14,11 +14,8 @@ jobs:
     name: Build Windows binary
     runs-on: windows-latest
     timeout-minutes: 30
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-
+    - uses: actions/checkout@v4
     - name: Set up Python 3.13
       uses: actions/setup-python@v5
       with:
@@ -26,24 +23,17 @@ jobs:
         architecture: "x64"
         cache: pip
         cache-dependency-path: "**/requirements.txt"
-
-    - name: Install dependencies
+    - name: Install Python dependencies
+      # Without dependencies to make sure everything is covered in the requirements.txt
       run: |
         python --version
         python -m pip install --upgrade pip wheel
-        pip install -r requirements.txt --no-dependencies
-        pip install -r builder/requirements.txt --no-dependencies
-
-    - name: Restore private key
-      run: |
-        mkdir private
-        echo "${{ secrets.PRIVATE_KEY }}" > private/private.key
-
-    - name: Build Windows standalone binary
+        pip install --upgrade -r requirements.txt --no-dependencies
+        pip install --upgrade -r builder/requirements.txt --no-dependencies
+    - name: Build Windows standalone binary and installer
       run: python builder/package.py installer
-
-    - name: Upload EXE as artifact
+    - name: Upload Windows standalone binary
       uses: actions/upload-artifact@v4
       with:
-        name: windows-build
-        path: dist/*.exe
+        path: "*-win64-bin.zip"
+        name: Windows standalone binary
